# aggy

./: .dockerignore  Cargo.toml  DEVDOC.md  README.md  aggynfrens.Dockerfile  docker-compose.dev.yml  docker-compose.tools.yml  docker-compose.yml  flyway.conf  justfile  render.yaml
.cargo/: config.toml
.sqlx/: query-10aab9711a3d4403094a5238625154f267f47303a2a80f271445798985442db6.json  query-11d5af51092e4d87722d681be93b2b7826786cfa6db512b8fb1c265697b21cdb.json  query-160d47a650bc1ed41d65b53480ad7e2e42650acce0e72592fb52d6ba230f03eb.json  query-1742ce7c118b35174a797adf569b683a1c4b54be8d1348f979b27eb0b9b674db.json  query-1dd6454f5acb05b3326366eac0672f00c9e5277678d5b096f38cfe566f04915b.json  query-1eeb249fb485d1fc52f7ad32785618143bba784830e2dd14b35861fa646ef46a.json  query-1fdf2f1750663c9feeb6ec941af7951f6592979bf63f35dae15c7d5e8f975312.json  query-20c27dff4e084123de435cd320782c471ac9e01971826cff1105e795efb577d6.json  query-3c3d9ef93a86a19e23931b0ced7c91eddcf84da19642139a08820717bfb59a82.json  query-42e89f43d98ea38bafbb45923363da15eb6c2b64d5213e68f7bb53aae6ca070b.json  query-444204da34560b1fe8a14284b80b312d506ce24da17e7cc42e5792a54c71be98.json  query-4b6bf67a728a4d51d0d0aa004583352784864958ed12bedf2310d951000f8ab1.json  query-4da3aece82f95d3a1967e569f3fc7a57f759b3fd6a6f0fd7750bfeb06d35d2b7.json  query-5d19d43396106405752181b4d8b4190ae1830501e86dce776ddb19d3c026cc5f.json  query-619c11886e7e0049706e5a656054c6e5d0dff014b573ac00db4deeec6d099c63.json  query-67d5cce2d3a8e7fe209e71b74f6594085b48eab91210c318f0833ce2017d13b1.json  query-7588ac32014ca4806b3abf23e5aedde4834f354b47128d300b6590213c10b6e2.json  query-823e172455883a9bbd1b48f56e975e975ff33e67b774c5d1d2502dcf8f74a9fd.json  query-8fe9797ef415dabc13ef983bd109ec09417ad5b9423d78566574a95314bc639d.json  query-9247e1eee00c112d35f17591358d4033f63552a11d96aee1c99a85b851eb0309.json  query-a15a1765e70cecf4ad99c0b769f8f8adcbd6081fad4186cce8ddafdab02e2739.json  query-a995ef957eee28c6f21a80a11ae14cf0338aeb48dc5bbe077a5dfe7c761e808b.json  (+15 more)
aggy_api/: .containerignore  .env  Cargo.toml  Containerfile.web  README.md  docker-compose.dev.yml  docker-compose.yml  justfile
aggy_api/fixtures/: 000_test_data.sql
aggy_api/migrations/: r__auth_user_functions.sql
aggy_api/migrations/versioned/: m1.1.1__utils.sql  m1.1.2__create_auth_tables.sql  m2.2.1__create_web_table.sql  m2.4.1__create_post_tables.sql
aggy_api/src/: auth.rs  lib.rs  macros.rs  post.rs  user.rs  utils.rs  web.rs
aggy_api/src/auth/: authenticate.rs  authorize.rs  authorize_service.rs
aggy_api/src/post/: create.rs  get.rs  list.rs  reply.rs
aggy_api/src/user/: create.rs  delete.rs  delete.rs.disabled  get.rs  list.rs  update.rs
aggy_api/src/utils/: list_request.rs  testing.rs
aggy_api/src/web/: session.rs
aggy_api/src/web/session/: create.rs  get.rs  update.rs
aggy_nextjs/: README.md  package.json  pnpm-lock.yaml  (+1 more)
aggynfrens_api/: .env  Cargo.toml  main.rs  playground.rs
aggynfrens_api/src/: main.rs
epigram_api/: Cargo.toml  README.md  docker-compose.dev.yml  docker-compose.yml  justfile
epigram_api/fixtures/: 000_test_data.sql
epigram_api/migrations/versioned/: m1.3.2__create_grams_tables.sql  m999.1.2__create_grams_tables.sql
epigram_api/src/: gram.rs  lib.rs  utils.rs
epigram_api/src/gram/: create.rs  get.rs
epigram_api/src/utils/: list_request.rs
(+99 files in other folders)
