[package]
name = "aggy_api"
version.workspace = true
edition.workspace = true
default-run = "web"
# build = "build.rs"

[[bin]]
name = "web"
test = false
bench = false

[[bin]]
name = "print_oas"
test = false
bench = false

[features]
default = ["dylink"]

[dependencies]
deps = { workspace = true }
dylink = { workspace = true, optional = true }
common = { workspace = true }
epigram_api = { workspace = true }

# shadow-rs = { workspace = true }
validator = { workspace = true }
sqlx = { workspace = true }

[build-dependencies]
# shadow-rs = { workspace = true }
